# sdd-lab

./: AGENTS.md  README.md  pyproject.toml
docs/: methodology.md  notes.md
docs/cheatsheets/: openspec-workflow.md
docs/decisions/: 001-sdd-prompt-strategy.md
docs/exercises/001-register-vehicle/: Untitled  apply-01.md  apply-02.md  apply-03.md  apply-Plantilla.txt  exercise.md  explore.md  review.md
docs/templates/: functional-feature.md
openspec/changes/register-vehicle/: design.md  proposal.md  tasks.md
openspec/changes/register-vehicle/specs/vehicle-registration/: spec.md
src/smart_parking/: __init__.py
src/smart_parking/domain/: __init__.py  errors.py  plate_normalizer.py  repository.py  types.py  validation.py  vehicle.py
