[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smart-parking-platform"
version = "0.1.0"
description = "Smart Parking Platform - SDD lab project (register vehicle module first)"
readme = "README.md"
requires-python = ">=3.11"
authors = [
  { name = "SDD Lab" }
]
dependencies = []

[project.optional-dependencies]
dev = []

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

